--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -15,12 +15,15 @@ SRCS = ft_bzero.c\
       ft_strlcat.c\
       ft_toupper.c\
       ft_strdup.c\
-      ft_strchr.c\
       ft_strrchr.c\
       ft_strncmp.c\
       ft_memchr.c\
       ft_memcmp.c\
       ft_strnstr.c\
+      ft_atoi.c\
+      ft_calloc.c\
+      ft_substr.c\
+      ft_strjoin.c\
 
 CC = cc
 RM = rm -f
