correction faite sur toute les fonstions faite

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -25,6 +25,8 @@ SRCS = ft_bzero.c\
       ft_substr.c\
       ft_strjoin.c\
       ft_strtrim.c\
+      ft_split.c\
+      ft_itoa.c\
 
 CC = cc
 RM = rm -f
