--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -27,6 +27,12 @@ SRCS = ft_bzero.c\
       ft_strtrim.c\
       ft_split.c\
       ft_itoa.c\
+      ft_strmapi.c\
+      ft_striteri.c\
+      ft_putstr_fd.c\
+      ft_putchar_fd.c\
+      ft_putendl_fd.c\
+      ft_putnbr_fd.c\
 
 CC = cc
 RM = rm -f
